feat(install):breeze

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
     mysql:
         image: 'mysql:8.0'
         ports:
-            - '${DB_PORT}:3306'
+            - '3307:${DB_PORT}'
         environment:
             MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
             MYSQL_DATABASE: '${DB_DATABASE}'
